save course's thumbnail on imgur
